--- a/bullets.html
+++ b/bullets.html
@@ -37,7 +37,7 @@ li:before {
 
 li.one:before {
    content:"\f111"; 
-}
+/*}
 li.two:before {
    content:"\f00c";
 }
@@ -55,7 +55,7 @@ li.six:before {
 }
 
 li:hover:before {
-  color:#fff;
+  color:#fff;*/
 }
 </style>
   <h1>
